// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders a Checkbox in error state correctly 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

<div>
  <div
    class="c0"
  >
    <label
      class="MuiFormControlLabel-root AbstractSwitch-formControlLabel-173"
      data-id="checkbox"
      id="my-checkbox-label"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-190 MuiCheckbox-root AbstractSwitchBase-error-root-182 AbstractSwitchBase-error-root-183 MuiCheckbox-colorSecondary AbstractSwitch-switchComp-174 MuiIconButton-colorSecondary"
        data-id="checkbox-CheckboxBase"
      >
        <span
          class="MuiIconButton-label"
        >
          <input
            aria-describedby="my-checkbox-helperText"
            class="PrivateSwitchBase-input-193"
            data-indeterminate="false"
            id="my-checkbox"
            type="checkbox"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m2-2H3v18h18V3z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </span>
      <span
        class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
      >
        Check 1
      </span>
    </label>
  </div>
</div>
`;

exports[`it renders a disabled Checkbox 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

<div>
  <div
    class="c0"
  >
    <label
      class="MuiFormControlLabel-root AbstractSwitch-formControlLabel-255 Mui-disabled"
      data-id="checkbox"
      id="my-checkbox-label"
    >
      <span
        aria-disabled="true"
        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-272 MuiCheckbox-root AbstractSwitchBase-root-264 AbstractSwitchBase-root-265 MuiCheckbox-colorSecondary AbstractSwitch-switchComp-256 PrivateSwitchBase-disabled-274 Mui-disabled MuiIconButton-colorSecondary Mui-disabled Mui-disabled"
        data-id="checkbox-CheckboxBase"
        tabindex="-1"
      >
        <span
          class="MuiIconButton-label"
        >
          <input
            aria-describedby="my-checkbox-helperText"
            class="PrivateSwitchBase-input-275"
            data-indeterminate="false"
            disabled=""
            id="my-checkbox"
            type="checkbox"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m2-2H3v18h18V3z"
            />
          </svg>
        </span>
      </span>
      <span
        class="MuiTypography-root MuiFormControlLabel-label Mui-disabled MuiTypography-body1"
      >
        Check 1
      </span>
    </label>
  </div>
</div>
`;

exports[`it renders an unchecked Checkbox with label and helperText 1`] = `
.c0 {
  margin: 0;
  padding: 0;
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}

<div>
  <div
    class="c0"
  >
    <label
      class="MuiFormControlLabel-root AbstractSwitch-formControlLabel-1"
      data-id="checkbox"
      id="my-checkbox-label"
    >
      <span
        aria-disabled="false"
        class="MuiButtonBase-root MuiIconButton-root PrivateSwitchBase-root-18 MuiCheckbox-root AbstractSwitchBase-root-10 AbstractSwitchBase-root-11 MuiCheckbox-colorSecondary AbstractSwitch-switchComp-2 MuiIconButton-colorSecondary"
        data-id="checkbox-CheckboxBase"
      >
        <span
          class="MuiIconButton-label"
        >
          <input
            aria-describedby="my-checkbox-helperText"
            class="PrivateSwitchBase-input-21"
            data-indeterminate="false"
            id="my-checkbox"
            type="checkbox"
            value=""
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5v14H5V5h14m2-2H3v18h18V3z"
            />
          </svg>
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </span>
      <span
        class="MuiTypography-root MuiFormControlLabel-label MuiTypography-body1"
      >
        Check 1
      </span>
    </label>
    <p
      class="MuiFormHelperText-root AbstractSwitch-formHelperText-3"
      data-id="checkbox-helperText"
      id="my-checkbox-helperText"
    >
      This is more info
    </p>
  </div>
</div>
`;
